# rubiks-rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md
rubiks/: Cargo.toml
rubiks-api/: Cargo.toml
rubiks-api/src/: dtos.rs  lib.rs  main.rs  repositories.rs
rubiks-api/src/api/: dtos.rs  mod.rs  routes.rs  state.rs
rubiks-api/src/database/: constants.rs  daily_solves.rs  migrate.rs  migration.rs  mod.rs  models.rs  pool.rs  rows.rs
rubiks-api/src/domain/: models.rs
rubiks-api/src/repositories/: daily_solve.rs  mod.rs
rubiks-api/src/services/: daily_solves.rs  mod.rs  scramble_service.rs
rubiks-cli/: Cargo.toml
rubiks-cli/src/: main.rs
rubiks/src/: cube.rs  faces.rs  lib.rs  location.rs  ncube.rs  piece.rs  stickers.rs  twist.rs
rubiks/src/generators/: mod.rs  scramble.rs
rubiks/src/solvers/: kociemba.rs  mod.rs  pochmann.rs
rubiks/src/utils/: permutations.rs
src/: cube.rs  main.rs  pochmann.rs
src/rubiks/: cube.rs  cube_constants.rs  cubie.rs  faces.rs  lib.rs  location.rs  mod.rs  moves.rs  piece.rs  stickers.rs  twist.rs
src/rubiks/solvers/: mod.rs  pochmann.rs
