[package]
name = "rubiks-api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.8.4", features = ["json"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
rubiks = { path = "../rubiks" }
rand = "0.9.2"
chrono = "0.4.41"
async-trait = "0.1.89"

[[bin]]
name = "migrate"
path = "src/migrations/migrate.rs"
